[gd_scene load_steps=4 format=3 uid="uid://bb6ewhn2tdbhu"]

[ext_resource type="Script" uid="uid://d2mn2rog7e6fg" path="res://stages/gameplay/zone.gd" id="1_txwa7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6vor0"]
size = Vector3(13.33, 2, 6.66)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_txwa7"]
albedo_color = Color(0, 1, 0, 1)
emission_enabled = true
emission = Color(0, 1, 0, 1)
emission_energy_multiplier = 2.0

[node name="1x2Zone" type="Node3D" groups=["buildings"]]
script = ExtResource("1_txwa7")

[node name="DestinationArea3D" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DestinationArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_6vor0")

[node name="DestinationOutline" type="CSGBox3D" parent="DestinationArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.005, 0)
visible = false
size = Vector3(13.33, 0.01, 6.66)
material = SubResource("StandardMaterial3D_txwa7")

[node name="CSGBox3D2" type="CSGBox3D" parent="DestinationArea3D/DestinationOutline"]
operation = 2
size = Vector3(12.88, 0.01, 6.11)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnPoint1" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 0, -3)

[node name="SpawnPoint2" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0, -3)
